# LuaBox2D

./: .gitattributes  .gitignore  .gitmodules  Box2D.props  Box2D_debug.props  CMakeLists.txt  LuaBox2D.sln  LuaBox2D.vcxproj  LuaBox2D.vcxproj.filters  Makefile  addClass.lua  addJoint.lua  addJoints.lua  common.hpp  lua5.1.props  main.cpp
dependencies/Box2D/Box2D/Box2D/: CMakeLists.txt
dependencies/Box2D/Box2D/Testbed/: CMakeLists.txt
src/: CMakeLists.txt  LuaBox2D.version  array.hpp  common.hpp  main.cpp  main.hpp
src/objects/: AABB.cpp  AABB.hpp  Body.cpp  Body.hpp  BodyDef.cpp  BodyDef.hpp  ChainShape.cpp  ChainShape.hpp  CircleShape.cpp  CircleShape.hpp  Contact.cpp  Contact.hpp  ContactEdge.cpp  ContactEdge.hpp  ContactFeature.cpp  ContactFeature.hpp  ContactFilter.cpp  ContactFilter.hpp  ContactID.cpp  ContactID.hpp  ContactImpulse.cpp  ContactImpulse.hpp  ContactListener.cpp  ContactListener.hpp  ContactManager.cpp  ContactManager.hpp  DistanceJoint.cpp  DistanceJoint.hpp  DistanceJointDef.cpp  DistanceJointDef.hpp  EdgeShape.cpp  EdgeShape.hpp  Filter.cpp  Filter.hpp  Fixture.cpp  Fixture.hpp  FixtureDef.cpp  FixtureDef.hpp  FrictionJoint.cpp  FrictionJoint.hpp  (+78 more)
test/: test.lua  test_Body.lua  test_HelloWorld.lua  test_Vec2.lua  test_VertexArray.lua  test_World.lua
